增加freemarker插件支持