@@ -23,12 +23,18 @@
 |-----run.sh				  	  linux运行启动程序
 
 |-----READEME.md				  使用说明
+##注意
+    如果在ide中运行生成器的话需要单独在`vm options`中单独设置`-Djava.ext.dirs=./lib;./driver;./plugins`即可
 ##原理
     本程序使用FreeMarker模板引擎，采用数据库反向生成的思想研发的代码生成器，初次使用建议先阅读READEME.TXT以及core-config.xml配置文件
 ##支持
 目前测试通过数据库有`mysql`、`postgresql`、`oracle`等关系型数据库，目前还不支持文档型数据库，如果使用者使用其他关系型数据库，请自行加入jar包驱动以及增加dialog配置即可
 
-*   使用步骤大体如下：
+##插件支持
+编写模板的过程中可以自定义一些FreeMarker的插件，只需要实现TemplateMethodModelEx类并且将实现类打包放到plugins文件夹下，并且将插件配置到core-config.xml文件的freemarker节点即可在模板中使用
+
+##使用方式
+*   步骤大体如下：
 
 	    *   1、根据各自业务场景配置template下的模板文件
 	    *   2、修改core-config.xml配置文件，进行个性化配置
